--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -20,6 +20,4 @@ jobs:
         DOCKER_PASSWORD: ${{secrets.DOCKER_PASSWORD}}        
       run: docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
     - name: Push to Dockerhub
-      env:
-        IMAGE_NAME: ${{secrets.DOCKER_USERNAME}}/cicd-pipeline
-      run: docker push $IMAGE_NAME:latest
+      run: docker push amagdy9129/cicd-pipeline:latest
